Actualización de nombres

--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
     
     <p class="mt-4">Integrantes:
         <ul>
-          <li>Calagua Mallqui, Jairo Andre - 20210279F</li>
-          <li>Espinoza Pari, Franklin - 20210135D</li>
-          <li>Salcedo Alvarez, Guillermo Ronie - 20210164D</li>
+          <li>Cipriano Arroyo Bruno - 20190497C</li>
+          <li>Portillo Delgado Hanno - 20185508K</li>
         </ul>
     </p>
 
