Actualización de nombres

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p class="mt-4">Integrantes:
         <ul>
           <li>Cipriano Arroyo Bruno - 20190497C</li>
-          <li>Portillo Delgado Hanno - 20185508K</li>
+          <li>Portillo Delgado Hannu - 20185508K</li>
         </ul>
     </p>
 
