--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light"> 
         <a class="navbar-brand" href="#">
-          <img src="logo_curalink.jpeg" alt="Logo" width="20px" >
+          <img src="logo_curalink.jpeg" alt="Logo" width="50%" >
           <span class="navbar-title">Entregas de Proyectos - IHC</span>
         </a>
     </nav>
