--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           <a href="Bocetos.pdf" class="btn btn-primary btn-block mb-2">Bocetos</a>
         </div>
     </div>
+<!-- Este es un comentario en HTML 
 
     <div class="card mt-4">
         <div class="card-body">
@@ -82,7 +83,7 @@
           <a href="https://unipe-my.sharepoint.com/personal/franklin_espinoza_p_uni_pe/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Ffranklin%5Fespinoza%5Fp%5Funi%5Fpe%2FDocuments%2FVIDEOS%2DPRUEBAS&ga=1&classId=4cba8fc4%2D2ec5%2D4b0c%2Dbc28%2D4c2ea50d920b&assignmentId=1db6d853%2D07c7%2D4549%2Db6ef%2D617a1d2b7a4f&submissionId=6d765317%2D8284%2D614c%2D4e1d%2De49317941fb0" class="btn btn-primary btn-block mb-2" target="_blank">Ver Videos</a>
         </div>
     </div>
-    
+    -->
   </div>
 
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
