--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light"> 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-center"> 
         <a class="navbar-brand" href="#">
           <img src="logo_curalink.jpeg" alt="Logo" width="15%" >
           <span class="navbar-title">Entregas de Proyectos - IHC</span>
