--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-center"> 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light"> 
         <a class="navbar-brand" href="#">
           <img src="logo_curalink.jpeg" alt="Logo" width="15%" >
           <span class="navbar-title">Entregas de Proyectos - IHC</span>
@@ -24,6 +24,17 @@
         </ul>
     </p>
 
+    <div class="card mt-4">
+      <div class="card-body">
+        <h5 class="card-title">Breve descripcion del problema</h5>
+        <p class="card-text">En un mundo donde el acceso rápido y eficiente a la atención médica es fundamental, 
+            los desafíos se multiplican debido a eventos como los recientes incendios en el Amazonas, que han tenido un impacto 
+            significativo en la salud pública. La aplicación CuraLink surge como una solución inteligente y personalizada para mejorar 
+            la atención médica a distancia, especialmente en situaciones donde el acceso a centros de salud físicos puede verse limitado, 
+            ya sea por emergencias climáticas o barreras geográficas.</p>
+      </div>
+    </div>
+      
     <div class="card mt-4">
       <div class="card-body">
         <h5 class="card-title">Primera Presentacion: Comprender el problema</h5>
