Se agrega informe 1

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             profundidad el tema , el conjunto de usuarios de su aplicación y los problemas
             y limitaciones que están involucrados en el problema.</p>
         
-        <a href="Informe-IHC.pdf" class="btn btn-primary btn-block mb-2">Informe</a>
+        <a href="./CuraLink_P01.pdf" class="btn btn-primary btn-block mb-2">Informe</a>
       </div>
     </div>
 
