--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             diseños de interfaz.</p>
           <a href="GRUPO 6 - IHC.pdf" class="btn btn-primary btn-block mb-2">Presentacion</a>
           <a href="https://www.figma.com/file/oY5GfMDufj5cwKQijhNFl6/PC2---IHC?type=design&mode=design&t=JpDf1JL8uGx4Tdn4-1" class="btn btn-primary btn-block mb-2" target="_blank">Ver diseño en Figma</a>
-          <a href="Bocetos.pdf" class="btn btn-primary btn-block mb-2">Bocetos</a>
+          <a href="https://www.canva.com/design/DAGTBNgR4_4/A-bfxzVaEFYAsxmazFLZPQ/edit?utm_content=DAGTBNgR4_4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn btn-primary btn-block mb-2">Bocetos de Prototipos</a>
         </div>
     </div>
 <!-- Este es un comentario en HTML 
