Se arregla error al abrir en nueva pestaña

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
           <h5 class="card-title">Segunda Presentacion: Alternativas de diseño</h5>
           <p class="card-text">En esta parte del proyecto desarrollará guiones gráficos y bocetos de sus
             diseños de interfaz.</p>
-          <a href="https://docs.google.com/presentation/d/1HnDD2F_Tmdw6qnBLr1uFZrxAe6uQg1SJJ_3aAoi5Oe0/edit?usp=sharing" class="btn btn-primary btn-block mb-2 target="_blank">Presentacion</a>
+          <a href="https://docs.google.com/presentation/d/1HnDD2F_Tmdw6qnBLr1uFZrxAe6uQg1SJJ_3aAoi5Oe0/edit?usp=sharing" class="btn btn-primary btn-block mb-2" target="_blank">Presentacion</a>
           <a href="https://www.figma.com/design/fYVOaXLGXkTeJNAyFV0DPB/PC2-IHC?node-id=0-1&t=SonUzuuqC7GjMaVl-1" class="btn btn-primary btn-block mb-2" target="_blank">Ver diseño en Figma</a>
-          <a href="https://www.canva.com/design/DAGTBNgR4_4/A-bfxzVaEFYAsxmazFLZPQ/edit?utm_content=DAGTBNgR4_4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn btn-primary btn-block mb-2">Bocetos de Prototipos</a>
+          <a href="https://www.canva.com/design/DAGTBNgR4_4/A-bfxzVaEFYAsxmazFLZPQ/edit?utm_content=DAGTBNgR4_4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn btn-primary btn-block mb-2" target="_blank">Bocetos de Prototipos</a>
         </div>
     </div>
 <!-- Este es un comentario en HTML 
