--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           <p class="card-text">En esta parte del proyecto desarrollará guiones gráficos y bocetos de sus
             diseños de interfaz.</p>
           <div class="enlaces entreg-2">
-            <a href="https://docs.google.com/presentation/d/1HnDD2F_Tmdw6qnBLr1uFZrxAe6uQg1SJJ_3aAoi5Oe0/edit?usp=sharing" class="btn btn-primary btn-block mb-2" target="_blank">Presentacion</a>
-            <a href="https://www.figma.com/design/fYVOaXLGXkTeJNAyFV0DPB/PC2-IHC?node-id=0-1&t=SonUzuuqC7GjMaVl-1" class="btn btn-primary btn-block mb-2" target="_blank">Diseño en Figma</a>
+            <a href="https://www.canva.com/design/DAGDeYlN1UA/h-gahX_zWSIY8dUOPPn2Ag/edit?utm_content=DAGDeYlN1UA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn btn-primary btn-block mb-2" target="_blank">Presentacion</a>
+            <a href="Informe de Proyecto03.pdf" class="btn btn-primary btn-block mb-2" target="_blank">Diseño en Figma</a>
             <a href="https://www.canva.com/design/DAGTBNgR4_4/A-bfxzVaEFYAsxmazFLZPQ/edit?utm_content=DAGTBNgR4_4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn btn-primary btn-block mb-2" target="_blank">Bocetos de Prototipos</a>
           </div>
           
