--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
           <h5 class="card-title">Segunda Presentacion: Presentacion del avance del proyecto (70%)</h5>
           <p class="card-text">Se implementa el front-end del proyecto CuraLink.</p>
           <div class="enlaces entreg-2">
-            <a href="https://www.canva.com/design/DAGTBNgR4_4/A-bfxzVaEFYAsxmazFLZPQ/edit?utm_content=DAGTBNgR4_4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn btn-primary btn-block mb-2" target="_blank">Presentacion</a>
-            <a href="Informe de Proyecto03.pdf" target="_blank">Informe</a>
+            <a href="https://www.canva.com/design/DAGDeYlN1UA/h-gahX_zWSIY8dUOPPn2Ag/edit?utm_content=DAGDeYlN1UA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn btn-primary btn-block mb-2" target="_blank">Presentacion</a>
+            <a href="Informe de Proyecto03.pdf" class="btn btn-primary btn-block mb-2" target="_blank">Informe</a>
             <a href="https://brunogust.github.io/CuraLink/" class="btn btn-primary btn-block mb-2" target="_blank">Link de la pagina</a>
           </div>
           
